tests/NormalTests/paczka1/fuzzy1/60900609.err
Error in line 5: 7oXDM22 S243 156,13
Error in line 1: QiaqmnjrKrH S104 78,9
Error in line 12: QiaqmnjrKrH S503 29,0
Error in line 2: 7oXDM22 S243 43,9
Error in line 16: 26y2968OQ S104 74,7
Error in line 8: A2uggEmVI S503 90,2
Error in line 21: A2uggEmVI S243 31,6
Error in line 27: A2uggEmVI S104 19,6
Error in line 20: QiaqmnjrKrH S104 220,9
Error in line 31: QiaqmnjrKrH A708 34,2
Error in line 36: QiaqmnjrKrH S503 53,5
